crates/parser/tests/snapshots/statements/valid/0035.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "select *,some_col from contact where id = '123 4 5';\n"
---
SelectStmt@0..53
  Select@0..6 "select"
  Whitespace@6..7 " "
  Ascii42@7..8 "*"
  Ascii44@8..9 ","
  Ident@9..17 "some_col"
  Whitespace@17..18 " "
  From@18..22 "from"
  Whitespace@22..23 " "
  Ident@23..30 "contact"
  Whitespace@30..31 " "
  Where@31..36 "where"
  Whitespace@36..37 " "
  Ident@37..39 "id"
  Whitespace@39..40 " "
  Ascii61@40..41 "="
  Whitespace@41..42 " "
  Sconst@42..51 "'123 4 5'"
  Ascii59@51..52 ";"
  Newline@52..53 "\n"

