crates/parser/tests/snapshots/statements/valid/0038@2.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "\nCREATE CAST (bigint AS int4) WITHOUT FUNCTION AS IMPLICIT;"
---
Parse {
    cst: SourceFile@0..59
      Newline@0..1 "\n"
      CreateCastStmt@1..59
        Create@1..7 "CREATE"
        Whitespace@7..8 " "
        Cast@8..12 "CAST"
        Whitespace@12..13 " "
        Ascii40@13..14 "("
        TypeName@14..20
          Bigint@14..20 "bigint"
        Whitespace@20..21 " "
        As@21..23 "AS"
        Whitespace@23..24 " "
        TypeName@24..28
          Ident@24..28 "int4"
        Ascii41@28..29 ")"
        Whitespace@29..30 " "
        Without@30..37 "WITHOUT"
        Whitespace@37..38 " "
        Function@38..46 "FUNCTION"
        Whitespace@46..47 " "
        As@47..49 "AS"
        Whitespace@49..50 " "
        ImplicitP@50..58 "IMPLICIT"
        Ascii59@58..59 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: CreateCastStmt(
                CreateCastStmt {
                    sourcetype: Some(
                        TypeName {
                            names: [
                                Node {
                                    node: Some(
                                        String(
                                            String {
                                                sval: "pg_catalog",
                                            },
                                        ),
                                    ),
                                },
                                Node {
                                    node: Some(
                                        String(
                                            String {
                                                sval: "int8",
                                            },
                                        ),
                                    ),
                                },
                            ],
                            type_oid: 0,
                            setof: false,
                            pct_type: false,
                            typmods: [],
                            typemod: -1,
                            array_bounds: [],
                            location: 13,
                        },
                    ),
                    targettype: Some(
                        TypeName {
                            names: [
                                Node {
                                    node: Some(
                                        String(
                                            String {
                                                sval: "int4",
                                            },
                                        ),
                                    ),
                                },
                            ],
                            type_oid: 0,
                            setof: false,
                            pct_type: false,
                            typmods: [],
                            typemod: -1,
                            array_bounds: [],
                            location: 23,
                        },
                    ),
                    func: None,
                    context: CoercionImplicit,
                    inout: false,
                },
            ),
            range: 0..58,
        },
    ],
}
